room routes done, swagger done
