# server/api.yaml
@@ -119,17 +119,106 @@ paths:
         403:
           description: Error
 
-      # Return User
-  /api/users/{id}:
-    get:
+  # Put json/body User
+  /api/users/user/{id}:
+    put:
       tags:
-        - User
-      summary: Return an object
-      description: Return an object user
+        - User Data
+      summary: Updating User
+      produces:
+        - application/json
+      consumes:
+        - application/json
       parameters:
         - name: id
           in: path
           required: true
+          description: id of user
+        - in: body
+          name: hotel
+          schema:
+            $ref: "#/components/schemas/User"
+      responses:
+        200:
+          schema:
+            $ref: "#/components/schemas/User"
+
+  # Put json/body Photos User
+  /api/users/updateImg/{id}:
+    put:
+      tags:
+        - User Data
+      summary: Post Image of User
+      consumes:
+        - multipart/form-data
+      parameters:
+        - name: id
+          in: path
+          description: Id of User
+          required: true
+        - in: formData
+          name: image
+          type: file
+          required: true
+          description: Files Upload
+      responses:
+        200:
+          description: Success
+          schema:
+            allOf:
+              - $ref: "#/components/schemas/ImgUser"
+              - $ref: "#/components/schemas/User"
+
+  # Delete User
+  /api/users/{id}/:
+    delete:
+      tags:
+        - User Data
+      summary: Deleting User
+      produces:
+        - application/json
+      consumes:
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: id of user
+      responses:
+        200:
+          description: User has been deleted
+
+  # Delete Photo of user
+  /api/users/deleteImage/{id}:
+    delete:
+      tags:
+        - User Data
+      summary: Deleting photo of user
+      produces:
+        - application/json
+      consumes:
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: id of user
+      responses:
+        200:
+          description: Photo has been deleted
+
+      # Return User
+  /api/users/{id}:
+    get:
+      tags:
+        - User Data
+      summary: Returns an object of User
+      description: Returns an object of User. img object can be undefined
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: id of user
           schema:
             type: integer
             example: 62e4100ac03dfcdbef190e03
@@ -137,7 +226,26 @@ paths:
         200:
           description: Success
           schema:
-            $ref: "#/components/schemas/User"
+            allOf:
+              - $ref: "#/components/schemas/ImgUser"
+              - $ref: "#/components/schemas/User"
+
+      # Return Users
+  /api/users:
+    get:
+      tags:
+        - User Data
+      summary: Returns an Array of Users
+      description: Returns an Array of Users. img object can be undefined
+      responses:
+        200:
+          description: Success
+          schema:
+            type: array
+            items:
+              allOf:
+                - $ref: "#/components/schemas/ImgUser"
+                - $ref: "#/components/schemas/User"
 
   # Post json/body Hotel
   /api/hotels:
@@ -172,6 +280,7 @@ paths:
         - name: id
           in: path
           required: true
+          description: id of hotel
         - in: body
           name: hotel
           schema:
@@ -180,8 +289,8 @@ paths:
         200:
           description: OK
 
-  # Put json/body Photos Hotel (problem photos in req.body)
-  /api/hotels//updatePhoto/{id}:
+  # Put json/body Photos Hotel (problem photos in req.body not possible with 2.0 -> possible with swagger 3.0)
+  /api/hotels/updatePhoto/{id}:
     put:
       tags:
         - Hotel Data
@@ -219,6 +328,7 @@ paths:
         - name: id
           in: path
           required: true
+          description: id of hotel
       responses:
         200:
           description: Hotel Deleted
@@ -269,12 +379,16 @@ paths:
           type: integer
           description: Price max
       summary: Returns a Array of Hotels
-      description: Array Return of hotels
+      description: Array Return of hotels. photos object can be null
       responses:
         200:
           description: Success
           schema:
-            $ref: "#/components/schemas/Hotels"
+            type: array
+            items:
+              allOf:
+                - $ref: "#/components/schemas/ImgArray"
+                - $ref: "#/components/schemas/Hotel"
         400:
           description: Hotels Error
         500:
@@ -294,12 +408,14 @@ paths:
             type: integer
             example: 62ac496c07509a710f01c17a
       summary: Returns a object of Hotel
-      description: Returns a object of Hotel through its id
+      description: Returns a object of Hotel through its id. photos object can be null
       responses:
         200:
           description: Success
           schema:
-            $ref: "#/components/schemas/Hotel"
+            allOf:
+              - $ref: "#/components/schemas/ImgArray"
+              - $ref: "#/components/schemas/Hotel"
         400:
           description: Hotel Error
         500:
@@ -355,7 +471,7 @@ paths:
         500:
           description: Internal Server Error
 
-  # return Hotel
+  # return Room of hotel
   /api/hotels/rooms/{id}:
     get:
       tags:
@@ -374,57 +490,199 @@ paths:
         200:
           description: Success
           schema:
-            $ref: "#/components/schemas/Rooms"
+            type: array
+            items:
+              $ref: "#/components/schemas/Room"
         400:
           description: Hotel Error
         500:
           description: Internal Server Error
 
+  # Post json/body Room
+  /api/rooms/{hotelId}:
+    post:
+      tags:
+        - Room Data
+      summary: Posting Room
+      produces:
+        - application/json
+      consumes:
+        - application/json
+      parameters:
+        - name: hotelId
+          in: path
+          required: true
+          description: id of hotel
+          schema:
+            type: integer
+            example: 62ac496c07509a710f01c17a
+        - in: body
+          name: hotel
+          schema:
+            $ref: "#/components/schemas/Room"
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: "#/components/schemas/Room"
+
+  # Put json/body Room
+  /api/rooms/{id}:
+    put:
+      tags:
+        - Room Data
+      summary: Updating Room
+      produces:
+        - application/json
+      consumes:
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: id of Room
+          schema:
+            type: integer
+            example: 62b066997a5ac696c9b22145
+        - in: body
+          name: room
+          schema:
+            $ref: "#/components/schemas/Room"
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/components/schemas/Room"
+
+  # Put json/body availability
+  /api/rooms/availability/{roomNumberId}:
+    put:
+      tags:
+        - Room Data
+      summary: Updating availability
+      produces:
+        - application/json
+      consumes:
+        - application/json
+      parameters:
+        - name: roomNumberId
+          in: path
+          required: true
+          description: id of roomNumbers object into Room model
+          schema:
+            type: integer
+            example: 62b066997a5ac696c9b22145
+        - in: body
+          name: room
+          schema:
+            type: object
+            properties:
+              dates:
+                type: array
+                items:
+                  type: string
+                  format: date-time
+      responses:
+        200:
+          description: Room status has been updated
+
+  # Delete Room
+  /api/rooms/{id}/{hotelId}:
+    delete:
+      tags:
+        - Room Data
+      summary: Deleting Room
+      produces:
+        - application/json
+      consumes:
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: Room ID to delete
+        - name: hotelId
+          in: path
+          required: true
+          description: Hotel ID
+      responses:
+        200:
+          description: Room has been deleted
+
+    # return Rooms
+  /api/rooms/:
+    get:
+      tags:
+        - Room Data
+      summary: Returns a Array of Rooms
+      description: Array Return of Rooms
+      responses:
+        200:
+          description: Success
+          schema:
+            type: array
+            items:
+              $ref: "#/components/schemas/Room"
+
+    # return Room
+  /api/rooms/{id}/:
+    get:
+      tags:
+        - Room Data
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: Id of Room
+          schema:
+            type: integer
+            example: 62b065bf7a5ac696c9b2212c
+      summary: Returns a object of Room
+      description: Returns a object of Room
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/components/schemas/Room"
+
+    # return RoomNumber
+  /api/rooms/getRoomNumber/{roomNumberId}:
+    get:
+      tags:
+        - Room Data
+      parameters:
+        - name: roomNumberId
+          in: path
+          required: true
+          description: Id of RoomNumber
+          schema:
+            type: integer
+            example: 62b065bf7a5ac696c9b2212e
+      summary: Returns an array of object RoomNumber
+      description: Returns a array of object RoomNumber
+      responses:
+        200:
+          description: Success
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                number:
+                  type: integer
+                  required: true
+                unavailableDates:
+                  type: array
+                  items:
+                    type: string
+                    format: date-time
+                _id:
+                  type: string
+                  required: true
+
 # Component
 components:
   schemas:
-    Hotels:
-      type: array
-      items:
-        type: object
-        properties:
-          _id:
-            type: integer
-          name:
-            type: string
-          type:
-            type: string
-          city:
-            type: string
-          address:
-            type: string
-          distance:
-            type: string
-          photos:
-            type: array
-          title:
-            type: string
-          desc:
-            type: string
-          rating:
-            type: integer
-            minimum: 0
-            maximum: 5
-          rooms:
-            type: array
-          cheapestPrice:
-            type: integer
-          featured:
-            type: boolean
-            default: false
-          createdAt:
-            type: string
-            format: date-time
-            readOnly: true
-          updatedAt:
-            type: string
-            format: date-time
-            readOnly: true
     Hotel:
       type: object
       properties:
@@ -475,43 +733,6 @@ components:
           type: string
           format: date-time
           readOnly: true
-    Rooms:
-      type: array
-      items:
-        type: object
-        properties:
-          _id:
-            type: integer
-          title:
-            type: string
-          price:
-            type: integer
-          maxPeople:
-            type: integer
-          desc:
-            type: string
-          roomNumbers:
-            type: array
-            items:
-              type: object
-              properties:
-                _id:
-                  type: integer
-                number:
-                  type: integer
-                unavailableDates:
-                  type: array
-                  items:
-                    type: string
-                    format: date-time
-          createdAt:
-            type: string
-            format: date-time
-            readOnly: true
-          updatedAt:
-            type: string
-            format: date-time
-            readOnly: true
     User:
       type: object
       properties:
@@ -529,6 +750,7 @@ components:
         IsAdmin:
           type: boolean
           readOnly: true
+          default: false
         firstname:
           type: string
           required: true
@@ -544,9 +766,6 @@ components:
           required: true
           minLength: 1
           maxLength: 100
-        img:
-          type: string
-          readOnly: true
         city:
           type: string
           required: true
@@ -557,6 +776,96 @@ components:
           required: true
           minLength: 2
           maxLength: 100
+        createdAt:
+          type: string
+          format: date-time
+          readOnly: true
+        updatedAt:
+          type: string
+          format: date-time
+          readOnly: true
+    ImgUser:
+      type: object
+      properties:
+        img:
+          type: object
+          properties:
+            _id:
+              type: integer
+              readOnly: true
+            url:
+              type: string
+              readOnly: true
+            public_id:
+              type: string
+              readOnly: true
+            createdAt:
+              type: string
+              format: date-time
+              readOnly: true
+            updatedAt:
+              type: string
+              format: date-time
+              readOnly: true
+    ImgArray:
+      type: object
+      properties:
+        photos:
+          type: array
+          items:
+            type: object
+            properties:
+              _id:
+                type: integer
+                readOnly: true
+              url:
+                type: string
+                readOnly: true
+              public_id:
+                type: string
+                readOnly: true
+              createdAt:
+                type: string
+                format: date-time
+                readOnly: true
+              updatedAt:
+                type: string
+                format: date-time
+                readOnly: true
+    Room:
+      type: object
+      properties:
+        _id:
+          type: integer
+          readOnly: true
+        title:
+          type: string
+          required: true
+        price:
+          type: number
+          required: true
+        maxPeople:
+          type: integer
+          required: true
+        desc:
+          type: string
+          required: true
+        roomNumbers:
+          type: array
+          items:
+            type: object
+            properties:
+              number:
+                type: integer
+              unavailableDates:
+                type: array
+                items:
+                  type: string
+                  format: date-time
+                readOnly: true
+              _id:
+                type: integer
+                readOnly: true
         createdAt:
           type: string
           format: date-time
